# mario_ppo

./: UV_SETUP.md  pyproject.toml  test.py  train.py
_smoke_trained_models/: ppo_super_mario_bros_1_1
src/: env.py  process.py
tensorboard/world_1_stage_1_simple/: events.out.tfevents.1780126706.DESKTOP-ARAL99B.38868.0
tensorboard/world_1_stage_2_simple/: events.out.tfevents.1780128764.DESKTOP-ARAL99B.796.0
tensorboard/world_1_stage_3_simple/: events.out.tfevents.1780136073.DESKTOP-ARAL99B.15884.0
tensorboard/world_1_stage_4_simple/: events.out.tfevents.1780142324.DESKTOP-ARAL99B.38320.0
trained_models/: ppo_super_mario_bros_1_1  ppo_super_mario_bros_1_2  ppo_super_mario_bros_1_3  ppo_super_mario_bros_1_4
