[project]
name = "super-mario-bros-ppo-pytorch"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "future==0.18.2",
    "gym==0.25.2",
    "gym-super-mario-bros==7.3.2",
    "numpy<2",
    "opencv-python>=4.8,<5",
    "pyglet==1.5.27",
    "torch>=2.1,<3",
]

[tool.uv]
package = false
