[project]
name = "super-mario-bros-ppo-pytorch"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "future==0.18.2",
    "gym==0.25.2",
    "gym-super-mario-bros==7.3.2",
    "numpy<2",
    "opencv-python>=4.8,<5",
    "pyglet==1.5.27",
    "torch==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "torchaudio==2.11.0+cu128",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true